# harmony-app

./: .gitignore  README.md  agconnect-services.json.example  build-profile.json5  signing-config.json.example
AppScope/resources/base/media/: PLACEHOLDER.md
car/: Index.ets  build-profile.json5  oh-package.json5
car/src/main/: module.json5
docs/: ARCHITECTURE.md  bundle-strategy.md  distributed-soul.md  performance-budget.md  release-setup.md  surface-decomposition.md
docs/architecture/: feature-template.md  intent-contract.md  layer-contract.md
docs/changelog/: CHANGELOG.md
docs/specs/: 2026-04-26-audiobook-implementation.md  2026-04-26-implementation-summary.md  2026-05-17-harmony-app-feature-first-design.md  2026-05-17-harmony-app-feature-first-impl-plan.md
entry/: oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  README.md  glyph_metrics.cpp  glyph_metrics.h  line_break.cpp  line_break.h  napi_bindings.cpp  napi_bindings.h  text_layout.cpp  text_layout.h  utf8.cpp  utf8.h
entry/src/main/ets/abilities/: ContinueReadingAbility.ets  LookupAbility.ets  ReaderAbility.ets
entry/src/main/ets/api/agora/: AgoraApi.ets
entry/src/main/ets/api/ai/: AiApi.ets
entry/src/main/ets/api/annual-report/: AnnualReportApi.ets
entry/src/main/ets/api/audiobooks/: AudiobookApi.ets  TtsV3Api.ets
entry/src/main/ets/api/authors/: AuthorsApi.ets
entry/src/main/ets/api/badges/: BadgesApi.ets
entry/src/main/ets/api/client/: ApiConfig.ets  HttpClient.ets  ResponseCache.ets  SseClient.ets
entry/src/main/ets/api/quotes/: QuotesApi.ets
entry/src/main/ets/api/reading/: BookmarkApi.ets  ReadingApi.ets
entry/src/main/ets/api/series/: SeriesApi.ets
entry/src/main/ets/core/analytics/: SensorsAnalytics.ets
entry/src/main/ets/core/atomic/: AtomicLauncher.ets  ContinuationManager.ets  NfcDecoder.ets
entry/src/main/ets/core/config/: CnConfig.ets
entry/src/main/ets/core/distributed-soul/: LocalFallback.ets  ReadingSoul.ets  SoulEngine.ets  SoulSchema.ets  index.ets
entry/src/main/ets/core/dynamic/: ModuleLoader.ets
entry/src/main/ets/core/i18n/: LocalizationManager.ets
entry/src/main/ets/core/intent/: Intent.ets  IntentBus.ets  IntentRouter.ets  ViewModel.ets  index.ets
entry/src/main/ets/core/monitoring/: AgcCrashReporter.ets
entry/src/main/ets/core/persistence/: PreferencesManager.ets  SecureKeystore.ets
entry/src/main/ets/core/router/: RouteConstants.ets  RouterService.ets
entry/src/main/ets/core/shell/: Index.ets
entry/src/main/ets/core/surface/: Surface.ets  SurfaceContext.ets  SurfaceKind.ets  SurfaceRegistry.ets  index.ets
entry/src/main/ets/core/sync/: BookmarkAdapter.ets  PersistentChannel.ets  ProgressAdapter.ets  RealtimeChannel.ets  SyncCoordinator.ets  SyncDomain.ets  SyncQueue.ets  index.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/features/agora/: index.ets
entry/src/main/ets/features/annual-report/: index.ets
entry/src/main/ets/model/: AudiobookCatalog.ets  Quote.ets  TtsManifest.ets  Voice.ets  index.ets
entry/src/main/ets/store/: AudioPlayerStore.ets  ReadingStore.ets  StoreKeys.ets
paywall/: Index.ets  oh-package.json5
paywall/src/main/: module.json5
reader/: Index.ets  oh-package.json5
reader/src/main/: module.json5
scripts/: check-bundle-size.sh  check-import-boundary.mjs  check-release-readiness.sh
tablet/: Index.ets  oh-package.json5
tablet/src/main/: module.json5
tv/: Index.ets  oh-package.json5
tv/src/main/: module.json5
vocab/: Index.ets  oh-package.json5
vocab/src/main/: module.json5
watch/: Index.ets  oh-package.json5
watch/src/main/: module.json5
widget/: Index.ets  oh-package.json5
widget/src/main/: module.json5
(+156 files in other folders)
